tests/ui/type-qpath-unexpected3.stderr
error: no rules expected the token `@`
 --> $DIR/type-qpath-unexpected3.rs:6:25
  |
6 |     input = [{ <T as :: @ }]
  |                         ^

error: aborting due to previous error

